--- a/sns_project/app/build.gradle
+++ b/sns_project/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
 
+    //권한 라이브러리
+    implementation 'gun0912.ted:tedpermission:2.0.0'
+
 }
