유저피드 추가 및 변수이름 변경
유저피드 추가, xml 추가적으로 변수이름 변경
App에서 로그인시 루트 권한을 갖고 있는 userID를 저장하여 다른 엑티비티에서 사용자 아이디에 접근할 수 있도록 수정(인텐트로 넘기지 않고)

--- a/sns_project/app/src/main/AndroidManifest.xml
+++ b/sns_project/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
             android:parentActivityName=".Activity.NewsFeed.NewsFeedActivity">
 
         </activity>
+        <activity android:name=".Activity.UserFeed.UserFeedActivity">
+        </activity>
+
 
     </application>
 
