--- a/sns_project/app/src/main/AndroidManifest.xml
+++ b/sns_project/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
