--- a/sns_project/app/build.gradle
+++ b/sns_project/app/build.gradle
@@ -66,5 +66,6 @@ dependencies {
 
     //권한 라이브러리
     implementation 'gun0912.ted:tedpermission:2.0.0'
-
+    //viewPager2
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha01'
 }
