--- a/sns_project/app/src/main/AndroidManifest.xml
+++ b/sns_project/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         </activity>
         <activity android:name=".Activity.UserFeed.UserFeedActivity">
         </activity>
-
+        <activity android:name=".Activity.FollowListPage.FollowListPageActivity">
+        </activity>
 
     </application>
 
